--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
 @font-face {
-    src: url(futura/FuturaStd-Medium.otf);
+    src: url(assets/fonts/futura/FuturaStd-Medium.otf);
     font-family: Futura;
 }
 
 @font-face {
-    src: url(futura/FuturaStd-Bold.otf);
+    src: url(assets/fonts/futura/FuturaStd-Bold.otf);
     font-family: Futura;
     font-weight: bold;
+}
+
+:root {
+    --main-font: #202d43;
+    --light-blue: #c0e7f1;
+    --blue: #0084ce;
+    --dark-blue: #002e87;
+    --orange: #bc8552;
 }
 
 body {
     padding: 0;
     margin: 0;
     font-family: Futura;
+    color: var(--main-font);
+}
+
+.title {
+    font-weight: bold;
+    font-size: 1.5vw;
+}
+
+.text {
+    font-size: 1vw;
 }
 
 .headline {
@@ -22,18 +40,18 @@ body {
     flex-direction: column;
     justify-content: center;
     padding-left: 5em;
-    color: #c0e7f1;
-    background-image: linear-gradient(#0084ce, #002e87);
+    color: var(--light-blue);
+    background-image: linear-gradient(var(--blue), var(--dark-blue));
 }
 
-.title {
+.page-title {
     font-weight: bold;
     font-size: 3vw;
     width: 50vw;
     text-align: center;
 }
 
-.subtitle {
+.page-subtitle {
     font-size: 1.75vw;
     width: 50vw;
     text-align: center;
@@ -41,10 +59,81 @@ body {
 
 .navbar {
     display: flex;
-    justify-content: right;
+    align-items: center;
+    position: sticky;
+    background-color: white;
+    top: 0;
+    transition: background-color 0.5s;
 }
 
-.navbar>div {
+.navbar.dark {
+    background-color: var(--main-font);
+}
+
+.navbar>div.link {
     font-size: 1vw;
+    transition: color 0.5s;
+}
+
+.navbar>div.link.dark {
+    color: var(--light-blue);
+}
+
+.navbar>div.spacer {
+    width: 100%;
+    transition: width 0.5s;
+}
+
+.navbar>div.spacer.dark {
+    width: 0;
+}
+
+.navbar>div.image-link>a {
+    padding: 0;
+}
+
+.navbar img {
+    max-height: 80%;
+    height: 2.5em;
+}
+
+.navbar a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    width: 100%;
+    height: 100%;
     padding: 0.6vw;
+}
+
+.body-section {
+    display: flex;
+    align-items: center;
+    margin: 5vh 10vw;
+}
+
+.body-section>* {
+    padding: 0 1vw;
+}
+
+.body-section img {
+    object-fit: scale-down;
+}
+
+.body-section:nth-child(odd) div.title,
+.body-section.body-section:nth-child(odd) div.text {
+    text-align: right;
+}
+
+.body-section:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.sources {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--light-blue);
+    padding: 5vh 35vw;
 }
