--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
 .title {
     font-weight: bold;
     font-size: 1.5vw;
+    text-transform: uppercase;
 }
 
 .text {
@@ -120,13 +121,8 @@ body {
     object-fit: scale-down;
 }
 
-.body-section:nth-child(odd) div.title,
-.body-section.body-section:nth-child(odd) div.text {
+.body-section>div:nth-child(odd) {
     text-align: right;
-}
-
-.body-section:nth-child(even) {
-    flex-direction: row-reverse;
 }
 
 .sources {
