--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body {
     font-weight: bold;
     font-size: 1.5vw;
     text-transform: uppercase;
+    margin: 0;
 }
 
 .text {
     font-size: 1vw;
+    margin: 0;
 }
 
 .headline {
@@ -50,6 +52,7 @@ body {
     font-size: 3vw;
     width: 50vw;
     text-align: center;
+    margin: 0;
 }
 
 .page-subtitle {
