--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     margin: 0;
     font-family: Futura;
     color: var(--main-font);
+    overflow-x: hidden;
 }
 
 .title {
@@ -83,6 +84,10 @@ body {
     color: var(--light-blue);
 }
 
+.navbar>button {
+    display: none;
+}
+
 .navbar>div.spacer {
     width: 100%;
     transition: width 0.5s;
@@ -122,7 +127,9 @@ body {
 }
 
 .body-section img {
-    object-fit: scale-down;
+    max-width: 40%;
+    height: auto;
+    width: auto;
 }
 
 .body-section>div:nth-child(odd) {
@@ -136,4 +143,59 @@ body {
     flex-direction: column;
     background-color: var(--light-blue);
     padding: 5vh 35vw;
+}
+
+.sources img {
+    max-width: 100%;
+    height: auto;
+    object-fit: scale-down;
+}
+
+@media only screen and (max-width: 600px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .navbar>button {
+        display: initial;
+        background-color: inherit;
+        border: none;
+    }
+
+    .navbar>div {
+        display: none;
+    }
+
+    .headline {
+        align-items: center;
+        padding: 0;
+    }
+
+    .page-title {
+        font-size: 7vw;
+        width: 100%;
+    }
+
+    .page-subtitle {
+        font-size: 4.5vw;
+        width: 75%;
+        font-weight: normal;
+    }
+
+    .title {
+        font-size: 2.5vw;
+    }
+
+    .text {
+        font-size: 2.15vw;
+    }
+
+    .sources {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        background-color: var(--light-blue);
+        padding: 5vh 20vw;
+    }
 }
